# playground

./: README.md
host-a-model/qwen-spcs/: .env.example  .gitignore  Makefile  README.md  setup.sql
host-a-model/qwen-spcs/agent/: .dockerignore  .gitignore  Dockerfile  config.example.yaml  pyproject.toml
host-a-model/qwen-spcs/agent/agent/: config.py  graph.py  llm.py  nodes.py  state.py
host-a-model/qwen-spcs/agent/agent/tools/: __init__.py  base.py  cortex_agents.py  cortex_mcp.py  cortex_rest.py  cortex_threads.py
host-a-model/qwen-spcs/agent/server/: app.py  logging_config.py  middleware.py  models.py
host-a-model/qwen-spcs/agent/spcs/: agent_service_spec.example.yaml  create_service.sql
host-a-model/qwen-spcs/agent/tests/: test_config.py  test_graph.py  test_middleware.py  test_tools.py
host-a-model/qwen-spcs/agent/ui/: index.html  package-lock.json  package.json  vite.config.ts
host-a-model/qwen-spcs/agent/ui/src/: App.tsx  index.css  types.ts
host-a-model/qwen-spcs/agent/ui/src/components/: BackendToggle.tsx  ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx  SnowflakeMark.tsx  SnowflakePulse.tsx  TokenPills.tsx  ToolCallCard.tsx
host-a-model/qwen-spcs/agent/ui/src/hooks/: useChat.ts
host-a-model/qwen-spcs/docker/: Dockerfile  entrypoint.sh
host-a-model/qwen-spcs/spcs/: create_service.sql  service_spec.example.yaml
host-a-model/qwen-spcs/stage/: upload_weights.example.sh
host-a-model/qwen-spcs/test/: client.py  smoke_test.sh
